[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/screens/main_menu.gd" type="Script" id=1]
[ext_resource path="res://src/ui/custom_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/fonts/MavenPro.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/ui/fonts/MavenPro-Heading.tres" type="DynamicFont" id=4]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 198.0
margin_top = 27.0
margin_right = 826.0
margin_bottom = 572.0
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 628.0
margin_bottom = 99.0

[node name="LabelTitle" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 628.0
margin_bottom = 99.0
text = "Elemental Master"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 163.0
margin_right = 628.0
margin_bottom = 427.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 74.0
margin_right = 554.0
margin_bottom = 264.0
rect_min_size = Vector2( 480, 0 )
custom_constants/separation = 24

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 480.0
margin_bottom = 48.0

[node name="BtnStart" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_left = 120.0
margin_right = 360.0
margin_bottom = 48.0
rect_min_size = Vector2( 240, 0 )
text = "Start"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 72.0
margin_right = 480.0
margin_bottom = 120.0

[node name="BtnControls" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_left = 120.0
margin_right = 360.0
margin_bottom = 48.0
rect_min_size = Vector2( 240, 0 )
text = "Controls"

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 144.0
margin_right = 480.0
margin_bottom = 192.0

[node name="BtnSettings" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4"]
margin_left = 120.0
margin_right = 360.0
margin_bottom = 48.0
rect_min_size = Vector2( 240, 0 )
text = "Settings"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 216.0
margin_right = 480.0
margin_bottom = 264.0

[node name="BtnQuit" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_left = 120.0
margin_right = 360.0
margin_bottom = 48.0
rect_min_size = Vector2( 240, 0 )
text = "Quit"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 491.0
margin_right = 628.0
margin_bottom = 545.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 170.0
margin_right = 458.0
margin_bottom = 54.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_right = 288.0
margin_bottom = 30.0

[node name="BtnCredits" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer"]
margin_left = 50.0
margin_right = 238.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
text = "Credits | Sources"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_top = 34.0
margin_right = 288.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer2"]
margin_right = 288.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "Copyright 2021 Nicholas Westerhausen"
